objects/Intranet_Utilization__c.object
<CustomObject>
    <description>Records usage history for Content Items</description>
    <fields>
        <fullName>Access_Location__c</fullName>
        <label>Access Location</label>
        <picklist>
            <picklistValues>
                <fullName>In Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Category__c</fullName>
        <formula>CASE(Click_Type__c, 
  &apos;Office Change&apos;,&apos;Change&apos;,
  &apos;Timezone Change&apos;,&apos;Change&apos;,
  &apos;Comment&apos;,&apos;Chatter&apos;,
  &apos;Like&apos;,&apos;Chatter&apos;,
  &apos;Share&apos;,&apos;Chatter&apos;,
  &apos;Launch App&apos;,&apos;Launch&apos;,
  &apos;Open Page&apos;,&apos;Launch&apos;,
  &apos;Feedback&apos;,&apos;Respond&apos;,
  &apos;Expand&apos;,&apos;View&apos;,
  &apos;Select&apos;,&apos;View&apos;,
  &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Click_Type__c</fullName>
        <label>Click Type</label>
        <picklist>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Like</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timezone Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Item</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment_Counter__c</fullName>
        <formula>IF(ISPICKVAL(Click_Type__c,&apos;Comment&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Container_Display_Name__c</fullName>
        <inlineHelpText>Name of the Container clicked or parent container of the item clicked</inlineHelpText>
        <label>Container Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <description>Created for CR-20150128-8603.</description>
        <label>Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intranet_Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intranet Container</label>
        <referenceTo>Intranet_Container__c</referenceTo>
        <relationshipLabel>Intranet Utilizations</relationshipLabel>
        <relationshipName>Intranet_Utilizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intranet_Item__c</fullName>
        <label>Intranet Item</label>
        <referenceTo>Intranet_Item__c</referenceTo>
        <relationshipLabel>Intranet Utilizations</relationshipLabel>
        <relationshipName>Intranet_Utilizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Intranet_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intranet Schedule</label>
        <referenceTo>Intranet_Schedule__c</referenceTo>
        <relationshipLabel>Intranet Utilizations</relationshipLabel>
        <relationshipName>Intranet_Utilizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_Counter__c</fullName>
        <formula>IF(ISPICKVAL(Click_Type__c,&apos;Like&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Like Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>BRU-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screensize__c</fullName>
        <label>Screensize</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop (1200 pixels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop (992 pixels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet (768 pixels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone (&lt;768 pixels)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_Counter__c</fullName>
        <formula>IF(ISPICKVAL(Click_Type__c,&apos;Share&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Intranet_Utilizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Intranet Utilization</label>
    <listViews>
        <fullName>Likes_Today</fullName>
        <columns>NAME</columns>
        <columns>Click_Date__c</columns>
        <columns>Office__c</columns>
        <columns>User__c</columns>
        <columns>Click_Category__c</columns>
        <columns>Click_Type__c</columns>
        <columns>Like_Counter__c</columns>
        <columns>Screensize__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Click_Type__c</field>
            <operation>equals</operation>
            <value>Like</value>
        </filters>
        <label>Likes - Today</label>
    </listViews>
    <listViews>
        <fullName>Open_Item_Action</fullName>
        <columns>NAME</columns>
        <columns>Click_Date__c</columns>
        <columns>Office__c</columns>
        <columns>User__c</columns>
        <columns>Click_Category__c</columns>
        <columns>Click_Type__c</columns>
        <columns>Like_Counter__c</columns>
        <columns>Screensize__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Click_Category__c</field>
            <operation>equals</operation>
            <value>Open Item</value>
        </filters>
        <label>Open Item Action</label>
    </listViews>
    <listViews>
        <fullName>Utilization</fullName>
        <columns>NAME</columns>
        <columns>Click_Date__c</columns>
        <columns>Office__c</columns>
        <columns>User__c</columns>
        <columns>Click_Category__c</columns>
        <columns>Click_Type__c</columns>
        <columns>Like_Counter__c</columns>
        <filterScope>Everything</filterScope>
        <label>Utilization</label>
    </listViews>
    <listViews>
        <fullName>Utilization_Screensize</fullName>
        <columns>NAME</columns>
        <columns>Click_Date__c</columns>
        <columns>Office__c</columns>
        <columns>User__c</columns>
        <columns>Click_Category__c</columns>
        <columns>Click_Type__c</columns>
        <columns>Like_Counter__c</columns>
        <columns>Screensize__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Screensize__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Utilization - Screensize</label>
    </listViews>
    <listViews>
        <fullName>Utilization_Today</fullName>
        <columns>NAME</columns>
        <columns>Click_Date__c</columns>
        <columns>Office__c</columns>
        <columns>User__c</columns>
        <columns>Click_Category__c</columns>
        <columns>Click_Type__c</columns>
        <columns>Like_Counter__c</columns>
        <columns>Screensize__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Utilization - Today</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Utilization</pluralLabel>
    <recordTypes>
        <fullName>Click</fullName>
        <active>true</active>
        <description>Recorded when a user clicks on an item for any reason</description>
        <label>Click</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>